@@ -1,4 +1,4 @@
-# $Id: Makefile,v 1.163 2007/02/10 18:52:48 andrei Exp $
+# $Id: Makefile,v 1.164 2007/02/10 19:41:30 andrei Exp $
 #
 # sip_router makefile
 #
@@ -202,6 +202,10 @@ utils_install=	utils/gen_ha1/gen_ha1 utils/serunix/serunix \
 
 
 ALLDEP=Makefile Makefile.sources Makefile.defs Makefile.rules
+
+# by default compile with tls hooks support (so that no ser recompile is
+#  needed before the tls module can be used)
+TLS_HOOKS=1
 
 #include general defs (like CC, CFLAGS  a.s.o)
 # hack to force makefile.defs re-inclusion (needed when make calls itself with
